--- a/templates/codinggrace_django/supporters.html
+++ b/templates/codinggrace_django/supporters.html
@@ -13,8 +13,23 @@
 		This is a hu-ge <span class="glyphicon glyphicon-heart"></span> to all our supporters so far. Big thanks to all who took time to meet me over tea/coffee and gave me advice, to all who volunteered their time to help me organise, mentor and support me in the various events.
 	</p>
 	
-	<h1 class="tk-cooper-black-std">Coding Grace Foundation Members</h1>
-	<p>Coding Grace Foundation is made up of two board members and one member.</p>	
+	<h1 class="tk-cooper-black-std" id="codinggrace-foundation-members">Coding Grace Foundation Members</h1>
+	<p class="lead">Coding Grace Foundation is made up of two board members and one member.</p>	
+	<!--
+	<div class="panel panel-primary">
+		<div class="panel-heading">Not-for-profit company details:</div>
+		<div class="panel-body">
+			<address >
+				<strong>Coding Grace Foundation CLG</strong><br>
+				5 Phoenix Park Avenue<br>
+				Phoenix Park Racecourse<br>
+				Dublin 15<br/>
+				Email: <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a><br>
+				<strong>Company number: 568940</strong>
+			</address>
+		</div>
+	</div>
+	-->
 	<div class="flex-supporters-container">
 		<div class="flex-supporters-item text-center thumbnail founder">
 			<img src="http://i.imgur.com/ngRYPfub.jpg" alt="Andrea Magnorsky" class="img-circle" width="30%">
@@ -42,8 +57,8 @@
 		</div>
 	</div>
 
-	<h1 class="tk-cooper-black-std">Advisors</h1>
-	<p>Big thanks to the following people who spent time giving me advice and listening to me. I'm still updating this list with the awesome people. <small>(In alphabetical order)</small></p>
+	<h1 class="tk-cooper-black-std" id="advisors">Advisors</h1>
+	<p class="lead">Big thanks to the following people who spent time giving me advice and listening to me. I'm still updating this list with the awesome people. <small>(In alphabetical order)</small></p>
 	<div class="flex-supporters-container">
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/mary-carty.png?set=set3&bgset=bg2" alt="Mary Carty" class="img-circle" width="30%">
@@ -52,6 +67,15 @@
 		        <p class="small">Executive Director Blackstone LaunchPad, Co-founder Outbox Incubator</p>
 	      	</div>
 		</div>
+		
+		<div class="flex-supporters-item text-center thumbnail advisor">
+			<img src="https://robohash.org/joanne-dolan.png?set=set3&bgset=bg2" alt="Joanne Dolan" class="img-circle" width="30%">
+			<div class="caption">
+		        <h4><a href="https://teen-turn.com/advisors/">Joanne Dolan</a></h4>
+		        <p class="small">Co-Founder at Teen-Turn</p>
+	      	</div>
+		</div>
+
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/alexandra-etienne.png?set=set3&bgset=bg2" alt="Alexandra Etienne" class="img-circle" width="30%">
 			<div class="caption">
@@ -62,7 +86,7 @@
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/edel-flynn.png?set=set3&bgset=bg2" alt="Edel Flynn" class="img-circle" width="30%">
 			<div class="caption">
-		        <h4><a href="https://www.linkedin.com/in/marycarty">Edel Flynn</a></h4>
+		        <h4><a href="https://www.linkedin.com/in/edelkennedyflynn">Edel Flynn</a></h4>
 		        <p class="small">Director and Co-Founder at Element78Space</p>
 	      	</div>
 		</div>
@@ -87,35 +111,139 @@
 		        <p class="small">Founder at Cohort, Inc</p>
 	      	</div>
 		</div>
-				<div class="flex-supporters-item text-center thumbnail advisor">
+		<div class="flex-supporters-item text-center thumbnail advisor">
+			<img src="https://robohash.org/mary-moloney?set=set3&bgset=bg2" alt="Mary Moloney" class="img-circle" width="30%">
+			<div class="caption">
+		        <h4><a href="https://www.linkedin.com/in/mary-moloney-9a159b18">Mary Moloney</a></h4>
+		        <p class="small">Global CEO CoderDojo Foundation</p>
+	      	</div>
+		</div>
+
+		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/cian-o-cuilleanain?set=set3&bgset=bg2" alt="Cian O'Cuilleanain" class="img-circle" width="30%">
 			<div class="caption">
 		        <h4><a href="https://about.me/cian.o">Cian O'Cuilleanain</a></h4>
 		        <p class="small">Co-Founder at Baily Labs</p>
 	      	</div>
 		</div>
+
+		
+		<div class="flex-supporters-item text-center thumbnail advisor">
+			<img src="https://robohash.org/julie-pichon?set=set3&bgset=bg2" alt="Julie Pichon" class="img-circle" width="30%">
+			<div class="caption">
+		        <h4><a href="https://www.linkedin.com/in/juliepichon">Julie Pichon</a></h4>
+		        <p class="small">Software Developer at Redhat, and Co-Founder of Coding Grace</p>
+	      	</div>
+		</div>
+		<div class="flex-supporters-item text-center thumbnail advisor">
+			<img src="https://robohash.org/martha-rotter?set=set3&bgset=bg2" alt="Martha Rotter" class="img-circle" width="30%">
+			<div class="caption">
+		        <h4><a href="https://www.linkedin.com/in/martharotter">Martha Rotter</a></h4>
+		        <p class="small">CEO &amp; Co-founder of Woopie, and Co-Founder of Coding Grace
+</p>
+	      	</div>
+		</div>
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/pauline-sargent?set=set3&bgset=bg2" alt="Pauline Sargent" class="img-circle" width="30%">
 			<div class="caption">
 		        <h4><a href="https://www.linkedin.com/in/paulinesargent">Pauline Sargent</a></h4>
-		        <p class="small">Digital Marketing Lecturer I Social Media Trainer I Speaker I Advocate for Women in Tech</p>
+		        <p class="small">Digital Marketing Lecturer / Social Media Trainer / Speaker / Advocate for Women in Tech</p>
+	      	</div>
+		</div>
+		<div class="flex-supporters-item text-center thumbnail advisor">
+			<img src="https://robohash.org/niambh-scullion?set=set3&bgset=bg2" alt="Niambh Scullion" class="img-circle" width="30%">
+			<div class="caption">
+		        <h4><a href="https://www.linkedin.com/in/niambh-scullion-7253763">Niambh Scullion</a></h4>
+		        <p class="small">Co-Founder at CoderDojoGirls@DCU, Co-Founder at Teen-Turn</p>
 	      	</div>
 		</div>
 		<div class="flex-supporters-item text-center thumbnail advisor">
 			<img src="https://robohash.org/andreea-wade?set=set3&bgset=bg2" alt="Andreea Wade" class="img-circle" width="30%">
 			<div class="caption">
 		        <h4><a href="https://www.linkedin.com/in/andreeawade">Andreea Wade</a></h4>
-		        <p class="small">Co Founder & CEO at Opening.io</p>
+		        <p class="small">Co Founder &amp; CEO at Opening.io</p>
+	      	</div>
+		</div>
+
+		
+		<div class="flex-supporters-item text-center thumbnail advisor">
+			<img src="https://robohash.org/patrick-walsh?set=set3&bgset=bg2" alt="Patrick Walsh" class="img-circle" width="30%">
+			<div class="caption">
+		        <h4><a href="https://www.linkedin.com/in/patrickmjwalsh">Patrick Walsh</a></h4>
+		        <p class="small">Founder and Managing Director at Dogpatch Labs.</p>
 	      	</div>
 		</div>
 	</div>
 
-	<h1 class="tk-cooper-black-std">Companies</h1>
-	<p>A high five to companies who have supported, hosted and getting involved in our events. <small>(In alphabetical order)</small></p>
+	<!-- ORGANISERS -->
+	<h1 class="tk-cooper-black-std" id="organisers">Organisers</h1>
+	<p class="lead">Big thanks to the organisers. Organisers help with the logistics of organising the workshop/event. Do you want to volunteer? You can <a href="https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form" class="highlight">apply here</a>. Enquiries: <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a></p>	
+	<h3><span class="label label-primary">Number of Organisers: {{organisers|length}}</h3>
+	<div class="flex-supporters-container">
+		{% for orgnaiser in organisers %}
+		<div class="flex-supporters-item text-center thumbnail mentor">
+			<img src="https://robohash.org/{{orgnaiser.first_name}}-{{orgnaiser.last_name}}?set=set3&bgset=bg2" alt="{{orgnaiser.first_name}} {{orgnaiser.last_name}}" class="img-circle" width="30%">
+			<div class="caption">
+		        <h4><a href="{{orgnaiser.url}}">{{orgnaiser.first_name}} {{orgnaiser.last_name}}</a></h4>
+	      	</div>
+	    </div>
+		{% endfor %}
 
+	</div>
 
+	<!-- MENTORS -->
+	<h1 class="tk-cooper-black-std" id="mentors">Mentors/Helpers</h1>
+	<p class="lead">Our workshops wouldn't be able to run without all these amazing volunteers. Interested in mentoring at one of our workshops? You can <a href="https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form" class="highlight">apply here</a>.  Enquiries: <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a></p>
+	<h3><span class="label label-primary">Number of Mentors: {{mentors|length}}</h3>
+	<div class="flex-supporters-container">
+		{% for mentor in mentors %}
+				<div class="flex-supporters-item text-center thumbnail mentor">
+					<img src="https://robohash.org/{{mentor.first_name}}-{{mentor.last_name}}?set=set3&bgset=bg2" alt="{{mentor.first_name}} {{mentor.last_name}}" class="img-circle" width="30%">
+					<div class="caption">
+				        <h4><a href="{{mentor.url}}">{{mentor.first_name}} {{mentor.last_name}}</a></h4>
+			      	</div>
+			    </div>
+			  	
+	    {% endfor %}
+	</div>
 
+	<!-- COMPANIES -->
+	<h1 class="tk-cooper-black-std" id="companies">Companies</h1>
+	<p class="lead">A high five to companies <small>(in alphabetical order)</small> who have supported, hosted and getting involved in our events .<br> If your company is interested in getting involved, you can arrange a meeting with us by emailing <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a>.</p>
+	<h3><span class="label label-primary">Company supporters: {{events_sponsors_list|length}}</h3>
+	<div class="flex-companies-container text-center"> 
+		{% for sponsor, events_list in events_sponsors_list %}
+		<div class="flex-companies-item  thumbnail">
+			<img src="https://robohash.org/{{sponsor.name}}?set=set3&bgset=bg2" alt="{{sponsor.name}} {{mentor.last_name}}" class="img-circle" width="30%">
+			<div class="caption">
+		        <h5><a href="{{sponsor.url}}">{{sponsor.name}}</a></h5>
+	      	</div>
+	      	<div class="panel panel-default">
+					<div class="panel-heading" role="tab" id="heading{{sponsor.id}}">
+					  <h4 class="panel-title">
+					    <a {%if not forloop.first %}class="collapsed"{% endif %} role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{sponsor.id}}" aria-expanded="{% if forloop.first %}true{% else %}false{% endif %}" aria-controls="collapse{{sponsor.id}}">
+					      Events
+					    </a>
+					  </h4>
+					</div>
+					<div id="collapse{{sponsor.id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{sponsor.id}}">
+					  <div class="panel-body flex-events-container">
+						<div class="flex-events-item">
+							<div class="panel panel-info small">
+								<div class="panel-heading">Events supported by {{sponsor.name}}</div>
+								{% for event in events_list %}
+								<a href="{% url 'events:event_detail' event.slug event.id %}" class="list-group-item">{{event.title}} ({{event.start_datetime}})</a>
+								{% endfor %}
+							</div>
+						</div>
+					  </div>
+					</div>
+				</div>
+		</div>
+		{% endfor %}
+	</div>
 
+<!--
 	<div class="flex-companies-container"> 		
 		<div class="flex-companies-item">
 			<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -135,7 +263,7 @@
 						  	<div>URL: <a href="{{key.url}}">{{sponsor.url}}</a></div>
 						</div>
 						<div class="flex-events-item">
-							<div class="panel panel-info">
+							<div class="panel panel-info small">
 								<div class="panel-heading">Events supported by {{sponsor.name}}</div>
 								{% for event in events_list %}
 								<a href="{% url 'events:event_detail' event.slug event.id %}" class="list-group-item">{{event.title}} ({{event.start_datetime}})</a>
@@ -149,7 +277,7 @@
 			</div>
 		</div>	
 	</div>
-		
+-->	
 
 </div>
 {% endblock %}
