Adding cities to get number of cities for organisers section, and updated more info on how people can get in contact in various sections of the page.

--- a/templates/codinggrace_django/supporters.html
+++ b/templates/codinggrace_django/supporters.html
@@ -177,7 +177,8 @@
 
 	<!-- ORGANISERS -->
 	<h1 class="tk-cooper-black-std" id="organisers">Organisers</h1>
-	<p class="lead">Big thanks to the organisers. Organisers help with the logistics of organising the workshop/event. Do you want to volunteer? You can <a href="https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form" class="highlight">apply here</a>. Enquiries: <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a></p>	
+	<p class="lead">Big thanks to the organisers. Organisers help with the logistics of organising the workshop/event. We currently have {{city_chapters|length}} city chapters. Find out more about our chapters <a href="/chapters" class="highlight">here</a>.</p> 
+	<p class="lead">Do you want to volunteer? You can <a href="https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form" class="highlight">apply here</a>. Enquiries: <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a></p>	
 	<h3><span class="label label-primary">Number of Organisers: {{organisers|length}}</h3>
 	<div class="flex-supporters-container">
 		{% for orgnaiser in organisers %}
