--- a/templates/base.html
+++ b/templates/base.html
@@ -42,13 +42,31 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    Coding Grace 2013 - 2014
+                    <div class="panel panel-default">
+                        <div class="panel-body text-center">
+                            <img src="/static/images/cg-logo.png"/>
+                            <h4>Coding Grace Foundation</h4>
+                            <p><strong>Company number: 568940</strong></p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4 text-right">
-                    <a href="https://twitter.com/codinggrace">@codinggrace</a> |||| <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook</a>
+                
+                <div class="col-md-5 col-md-offset-4 text-center">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <ul class="list-group">
+                                <li class="list-group-item"><a href="/#about">About Us</a> | <a href="/chapters/">Chapters</a> | <a href="/supporters/">Supporters</a></li>
+                                <li class="list-group-item"><span class="glyphicon glyphicon-info-sign"></span> <a href="/colophon/">Colophon</a> | <a href="/resources/">Resources</a></li>
+                                <li class="list-group-item"><a href="https://twitter.com/codinggrace">@codinggrace</a> | <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook</a></li>
+                            </ul>
+                            <a href="mailto:contact@codinggrace.com" class="btn btn-success active" role="button">Contact Us</a>
+                        </div>
+                    </div>             
                 </div>
-                <div class="col-md-5 text-right">
-                <span class="glyphicon glyphicon-info-sign"></span> <a href="/colophon/">Colophon</a> |||| <a href="/resources/">Resources</a>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="small">2012-2016 Coding Grace, All Rights Reserved.</p>
                 </div>
             </div>
         </div>
