--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,14 +80,14 @@ footer .panel-body, footer .list-group{
     color:white;
 }
 
-.flex-companies-container, .flex-supporters-container, .flex-events-container {
+.flex-get-involved-container, .flex-companies-container, .flex-supporters-container, .flex-events-container, .flex-getinvolved-container {
     display: -webkit-flex;
     display: flex;
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;   
 }
 
-.flex-supporters-container, .flex-events-container {
+.flex-get-involved-container, .flex-supporters-container, .flex-events-container {
      -webkit-align-items: center;
     align-items: center;
     -webkit-justify-content: center;
@@ -137,13 +137,8 @@ footer .panel-body, footer .list-group{
     margin-left: 20px;
 }
 
+
 .flex-get-involved-container {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-justify-content: center;
-    justify-content: center;
     -webkit-align-items: stretch;
     align-items: stretch;
     padding: 30px 0;
