updated chapters page including its css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -179,17 +179,18 @@ h1#chapters, h1#resources, h1#sponsors{
 
 }
 
-h1#chapters, h1#resources, #get_involved h1{
-    text-shadow: 3px 3px 0 #000,
+/*h1#chapters, h1#resources, #get_involved h1{
+    text-shadow: 1px 1px 0 #000,
      -1px -1px 0 #000,
       1px -1px 0 #000,
       -1px 1px 0 #000,
        1px 1px 0 #000;
-}
+}*/
 
 #get_involved h1 {
     color:white;
     background-color: rgba(247, 162, 27, 0.7);
+    padding: 20px;
 }
 
 #chapter .thumbnail{
