--- a/templates/codinggrace_django/supporters.html
+++ b/templates/codinggrace_django/supporters.html
@@ -15,28 +15,14 @@
 	
 	<h1 class="tk-cooper-black-std" id="codinggrace-foundation-members">Coding Grace Foundation Members</h1>
 	<p class="lead">Coding Grace Foundation is made up of two board members and one member.</p>	
-	<!--
-	<div class="panel panel-primary">
-		<div class="panel-heading">Not-for-profit company details:</div>
-		<div class="panel-body">
-			<address >
-				<strong>Coding Grace Foundation CLG</strong><br>
-				5 Phoenix Park Avenue<br>
-				Phoenix Park Racecourse<br>
-				Dublin 15<br/>
-				Email: <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a><br>
-				<strong>Company number: 568940</strong>
-			</address>
-		</div>
-	</div>
-	-->
+
 	<div class="flex-supporters-container">
 		<div class="flex-supporters-item text-center thumbnail founder">
 			<img src="http://i.imgur.com/ngRYPfub.jpg" alt="Andrea Magnorsky" class="img-circle" width="30%">
 			<div class="caption">
 		        <h2><a href="https://twitter.com/roundcrisis">Andrea Magnorsky</a></h2>
 		        <p>Director/Co-Founder</p>
-		        <p class="small">She's a Senior Software Engineer at Workday, Co-Founder - CTO of BatCat Games, Director/Co-Founder of GameCraft Foundation, and Co-Founder/Organiser of Functional Kats.</p>
+		        <p class="small">A Senior Software Engineer at Workday, Co-Founder - CTO of BatCat Games, Director/Co-Founder of GameCraft Foundation, and Co-Founder/Organiser of Functional Kats.</p>
 	      	</div>
 		</div>
 		<div class="flex-supporters-item text-center thumbnail founder">
@@ -44,7 +30,7 @@
 			<div class="caption">
 		        <h2><a href="https://twitter.com/micktwomey">Michael Twomey</a></h2>
 		        <p>Director/Co-Founder</p>
-		        <p class="small">He's a Senior Software Engineer at Udemy, Director/Co-Founder of GameCraft Foundation and Founder/Organiser of Dublin Elm User Group</p>
+		        <p class="small">A Senior Software Engineer at Udemy, Director/Co-Founder of GameCraft Foundation and Founder/Organiser of Dublin Elm User Group</p>
 	      	</div>
 		</div>
 		<div class="flex-supporters-item text-center thumbnail founder">
@@ -52,7 +38,7 @@
 			<div class="caption">
 		        <h2><a href="https://about.me/whykay">Vicky Twomey-Lee</a></h2>
 		        <p>Member/Co-Founder</p>
-		        <p>Developer in past life, now found organising tech events and conferences, with a focus on diversity on tech. Involved in many not-for-profits to be listed here. :-)</p>
+		        <p class="small">A Developer in past life, now found organising tech events and conferences, with a focus on diversity on tech. Involved in way too many not-for-profits to be listed here. :-)</p>
 	      	</div>
 		</div>
 	</div>
@@ -177,7 +163,7 @@
 
 	<!-- ORGANISERS -->
 	<h1 class="tk-cooper-black-std" id="organisers">Organisers</h1>
-	<p class="lead">Big thanks to the organisers. Organisers help with the logistics of organising the workshop/event. We currently have {{city_chapters|length}} city chapters. Find out more about our chapters <a href="/chapters" class="highlight">here</a>.</p> 
+	<p class="lead">Big thanks to the organisers. Organisers help with the logistics of organising the workshop/event. We currently have {{city_chapters|length}} city chapters. Find out more about our chapters and how to sign up as an organiser <a href="/chapters" class="highlight">here</a>.</p> 
 	<p class="lead">Do you want to volunteer? You can <a href="https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form" class="highlight">apply here</a>. Enquiries: <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a></p>	
 	<h3><span class="label label-primary">Number of Organisers: {{organisers|length}}</h3>
 	<div class="flex-supporters-container">
@@ -243,42 +229,6 @@
 		</div>
 		{% endfor %}
 	</div>
-
-<!--
-	<div class="flex-companies-container"> 		
-		<div class="flex-companies-item">
-			<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-				{% for sponsor, events_list in events_sponsors_list %}
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="heading{{sponsor.id}}">
-					  <h4 class="panel-title">
-					    <a {%if not forloop.first %}class="collapsed"{% endif %} role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{sponsor.id}}" aria-expanded="{% if forloop.first %}true{% else %}false{% endif %}" aria-controls="collapse{{sponsor.id}}">
-					      {{sponsor.name}}
-					    </a>
-					  </h4>
-					</div>
-					<div id="collapse{{sponsor.id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{sponsor.id}}">
-					  <div class="panel-body flex-events-container">
-					  	<div class="flex-events-item">
-						  	<div>{{sponsor.blurb|md|safe}}</div>
-						  	<div>URL: <a href="{{key.url}}">{{sponsor.url}}</a></div>
-						</div>
-						<div class="flex-events-item">
-							<div class="panel panel-info small">
-								<div class="panel-heading">Events supported by {{sponsor.name}}</div>
-								{% for event in events_list %}
-								<a href="{% url 'events:event_detail' event.slug event.id %}" class="list-group-item">{{event.title}} ({{event.start_datetime}})</a>
-								{% endfor %}
-							</div>
-						</div>
-					  </div>
-					</div>
-				</div>
-				{% endfor %}
-			</div>
-		</div>	
-	</div>
--->	
 
 </div>
 {% endblock %}
