--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,16 @@
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <!-- <li {% if active == "home" %}class="active"{% endif %}><a href="/">Home</a></li> -->
-                        <li {% if active == "home" %}class="active"{% endif %}><a href="/#about">About</a></li>
+                        <!-- <li {% if active == "home" %}class="active"{% endif %}><a href="/#about">About</a></li> -->
+                        <li class="dropdown {% if active == 'home' %}active{% endif %}">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/#about">Who are we?</a></li>
+                                <li><a href="/#chapter">Join our Newsletter</a></li>
+                                <li><a href="/#chapter">Call for Mentors</a></li>
+                                <li><a href="/#chapter">Contact Us</a></li>
+                            </ul>
+                        </li>
                         <li {% if active == "news" %}class="active"{% endif %}><a href="/news/">News</a></li>
                         <li {% if active == "chapters" %}class="active"{% endif %}><a href="/chapters/">Chapters</a></li>
                         <li {% if active == "conduct" %}class="active"{% endif %}><a href="/codeofconduct/">Code Of Conduct</a></li>
