update the refund section in FAQ

--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -91,7 +91,7 @@
                 <p>You can contact <strong>{{event.organiser}}</strong> by emailing <a href="mailto:{{event.organiser.email}}">{{event.organiser.email}}</a>.</p>
 
 
-                <h1>Refunds</h1>
+                <h1>Refunds (Only applicable if this is a PAID event)</h1>
                 <p>Full refunds until 24 hours before the event.</p>
                 <p>If there are not enough people signed up to the event, I will be in touch to refund you.</p>
             </div>
