--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -80,8 +80,9 @@
             </div>
             <div class="col-md-5">
                 <h1 >FAQ</h1>
-                <h3>Q. I see it's female-friendly, are guys welcome as well?</h3>
-                <p><strong>YES.</strong> You are welcome. If you have any questions, feel free to contact me at contact@codinggrace.com.</p>
+                <h3>A lot of our events are female-friendly events, are guys welcome as well?</h3>
+                <p><strong>YES.</strong> You are welcome. Events we run or partner in are diversity friendly. If you have any questions, feel free to contact me at contact@codinggrace.com.</p>
+
 
                 {% if event.faq %}
                 {{event.faq|md|safe}}
