updated faq - fixed typo

--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -80,7 +80,7 @@
             </div>
             <div class="col-md-5">
                 <h1 >FAQ</h1>
-                <h3>A lot of our events are female-friendly events, we have enquiries asking it guys are welcome as well?</h3>
+                <h3>A lot of our events are female-friendly events, we have enquiries asking if guys are welcome as well?</h3>
                 <p><strong>YES.</strong> You are welcome. Events we run or partner in are diversity friendly. If you have any questions, feel free to contact me at contact@codinggrace.com.</p>
 
 
