updated the level strings to labels with bootstrap style

--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -29,12 +29,13 @@
                     <span class="glyphicon glyphicon-map-marker"></span> <strong>{{event.location.venue}}</strong>, {{event.location.address1}}{% if event.location.address2 %}, {{event.location.address2}}{% endif %}, {{event.location.city|capfirst}}
                     <br/>
                     <span class="glyphicon glyphicon-calendar"></span> {{event.start_datetime|date:"D, dS M Y"}} {{ event.start_datetime|time:"H:i" }} till {{ event.end_datetime|time:"H:i" }}
+
                 </section>
                 {% if not workshop_ended %}
                 <h3><span class="glyphicon glyphicon-time"></span> {{ event.start_datetime|timeuntil }} left to reserve your place.</h3>
                 {% endif %}
 
-                <h2>Workshop details <small><span class="glyphicon glyphicon-tag"></span> {% for level in event.level_type.all %}{{ level }}{% endfor %}</small></h2>
+                <h2>Workshop details <small> {% for level in event.level_type.all %}<span class="label label-info">{{ level }}</span> {% endfor %}</small></h2>
 
                 <h4><span class="glyphicon glyphicon-euro"></span> {{event.cost}}</h4>
 
