--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -27,7 +27,7 @@
         {% url 'events:event_detail' slug=event.slug event_id=event.id as the_url %}
         <div class="col-md-2"></div>
         <div class="col-md-10">
-            <h2 class="tk-cooper-black-std"> <a href="{{ the_url }}">{{event.title}}</a> <small><span class="glyphicon glyphicon-tag"></span> {% for level in event.level_type.all %}{{ level }}{% endfor %} {% if event.is_cancelled %}<span class="label label-danger">Cancelled</span>{% endif %}</small></h2>
+            <h2 class="tk-cooper-black-std"> <a href="{{ the_url }}">{{event.title}}</a> <small>{% for level in event.level_type.all %}<span class="label label-info">{{ level }}</span> {% endfor %} {% if event.is_cancelled %}<span class="label label-danger">Cancelled</span>{% endif %}</small></h2>
             <div class="row">
                 <section class="col-md-8">
                     <span class="glyphicon glyphicon-map-marker"></span> <span class="highlight">{{event.location.city|title}}</span> <span class="glyphicon glyphicon-play"></span>  <span class="glyphicon glyphicon-calendar"></span> <span class="highlight">{{event.start_datetime|date:"D, dS M Y"}} {{ event.start_datetime|time:"H:i e" }}</span> </span> <span class="glyphicon glyphicon-play"></span> <span class="glyphicon glyphicon-time"></span> {{ event.start_datetime|timeuntil }} left
