--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
                     <ul class="nav navbar-nav">
                         <!-- <li {% if active == "home" %}class="active"{% endif %}><a href="/">Home</a></li> -->
                         <!-- <li {% if active == "home" %}class="active"{% endif %}><a href="/#about">About</a></li> -->
+                        <li {% if active == "events" %}class="active"{% endif %}><a href="/events/">Events</a></li>
                         <li class="dropdown {% if active == 'home' %}active{% endif %}">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
