removed circle class for img and changed width of image displayed (logo)

--- a/templates/codinggrace_django/supporters.html
+++ b/templates/codinggrace_django/supporters.html
@@ -202,7 +202,7 @@
 		{% for sponsor, events_list in events_sponsors_list %}
 		<div class="flex-companies-item  thumbnail">
 			<!-- <img src="https://robohash.org/{{sponsor.name}}?set=set3&bgset=bg2" alt="{{sponsor.name}} {{mentor.last_name}}" class="img-circle" width="30%"> -->
-			<img src="https://s3-eu-west-1.amazonaws.com/static-codinggrace/logos/{{sponsor.slug}}.png" alt="{{sponsor.name}}" class="img-circle" width="30%">
+			<img src="https://s3-eu-west-1.amazonaws.com/static-codinggrace/logos/{{sponsor.slug}}.png" alt="{{sponsor.name}}" width="200px">
 			<div class="caption">
 		        <h5><a href="{{sponsor.url}}">{{sponsor.name}}</a></h5>
 	      	</div>
