--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -62,7 +62,6 @@
 
 <h1 id="past-events" class="text-center tk-cooper-black-std">Past Events</h1>
 <div class="past-events">
-{% if past_events %}
     {% for year_event in past_events %}
     <h2 class="text-center tk-cooper-black-std">{{year_event.0}}</h2>
     <div class="flex-events-container">
@@ -80,12 +79,14 @@
                 </ul>
             </div>
         </div>
+        {% empty %}
+        <div class="flex-event-item">
+            No past events so far.
+        </div>
         {% endfor %}
         
-
-    </div>
+    </div>        
     {% endfor %}    
-{% endif %}
 </div>
 
 {% endblock %}
