minor update to chg text to a h2

--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -81,7 +81,7 @@
         </div>
         {% empty %}
         <div class="flex-event-item">
-            No past events so far.
+            <h3>No past events so far.</h3>
         </div>
         {% endfor %}
         
