updated about diversity question in FAQ

--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -80,15 +80,16 @@
             </div>
             <div class="col-md-5">
                 <h1 >FAQ</h1>
+                <h3>Q. A lot of our events are female-friendly events, we have enquiries asking if guys are welcome as well?</h3>
                 <h3>Q. I see it's female-friendly, are other genders welcome as well?</h3>
-                <p><strong>YES.</strong> We welcome people from all diverse backgrounds. We label our events "female-friendly" to encourage more women interested/involved in tech to particiate in our events.</p> 
+                <p><strong>YES.</strong> You are welcome. Events we run or partner in are diversity friendly.</p> 
                 <p>If you have any questions, feel free to contact us at <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a>.</p>
 
                 {% if event.faq %}
                 {{event.faq|md|safe}}
                 {% endif %}
 
-                <h1>Refunds <small>(if applicable)</small></h1>
+                <h1>Refunds <small>(Only applicable if this is a PAID event)</small></h1>
                 <p>Full refunds until 24 hours before the event.</p>
                 <p>If there are not enough people signed up to the event, I will be in touch to refund you.</p>
 
