updated about diversity question in FAQ

--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -80,8 +80,7 @@
             </div>
             <div class="col-md-5">
                 <h1 >FAQ</h1>
-                <h3>Q. A lot of our events are female-friendly events, we have enquiries asking if guys are welcome as well?</h3>
-                <h3>Q. I see it's female-friendly, are other genders welcome as well?</h3>
+                <h3>Q. A lot of our events are female-friendly events, we have enquiries asking if other genders are welcome as well?</h3>
                 <p><strong>YES.</strong> You are welcome. Events we run or partner in are diversity friendly.</p> 
                 <p>If you have any questions, feel free to contact us at <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a>.</p>
 
