small edit to about section

--- a/templates/codinggrace_django/about.html
+++ b/templates/codinggrace_django/about.html
@@ -21,7 +21,7 @@
                 We aim to provide a support network for people from all backgrounds and hope our outreach will help bring those who are interested in code development together and learn from one another.
             </p>
 
-            <h3><a href="/supporters/"><span class="glyphicon glyphicon-info-sign"></span> More info on our awesome supporters</a></h3>
+            <h3><a href="/supporters/"><span class="glyphicon glyphicon-info-sign"></span> More info on our <span class="glyphicon glyphicon-heart"></span> awesome supporters <span class="glyphicon glyphicon-heart"></span></a></h3>
 
         </div>
         <div class="col-md-4">
