--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
                                 <li><a href="/#about">Who are we?</a></li>
                                 <li><a href="/#chapter">Join our Newsletter</a></li>
                                 <li><a href="/#chapter">Call for Mentors</a></li>
+                                <li><a href="/supporters/">Our awesome supporters</a></li>
                                 <li><a href="/#chapter">Contact Us</a></li>
                             </ul>
                         </li>
