changed size of organisers name

--- a/templates/codinggrace_django/supporters.html
+++ b/templates/codinggrace_django/supporters.html
@@ -171,7 +171,7 @@
 		<div class="flex-supporters-item text-center thumbnail mentor">
 			<img src="https://robohash.org/{{orgnaiser.first_name}}-{{orgnaiser.last_name}}?set=set3&bgset=bg2" alt="{{orgnaiser.first_name}} {{orgnaiser.last_name}}" class="img-circle" width="30%">
 			<div class="caption">
-		        <h4><a href="{{orgnaiser.url}}">{{orgnaiser.first_name}} {{orgnaiser.last_name}}</a></h4>
+		        <small><a href="{{orgnaiser.url}}">{{orgnaiser.first_name}} {{orgnaiser.last_name}}</a></small>
 	      	</div>
 	    </div>
 		{% endfor %}
