fixed broken links on resources page

--- a/templates/codinggrace_django/resources/general.html
+++ b/templates/codinggrace_django/resources/general.html
@@ -34,8 +34,10 @@
 </div>
 <div>If you don't want to go near IDEs and are happy with text editors and working in command line:
     <ul>
+        <li><a href="https://atom.io/">Atom Editor</a> (All Platforms)</li>
         <li><a href="http://www.sublimetext.com/">Sublime Text</a> (All Platforms)</li>
         <li><a href="http://macromates.com/">TextMate</a>  (Mac only)</li>
+        <li><a href="https://code.visualstudio.com/">Visual Studio Code (All Platforms)</a></li>
         <li>More to come...</li>
     </ul>
 </div>
