--- a/templates/codinggrace_django/resources/html_resources.html
+++ b/templates/codinggrace_django/resources/html_resources.html
@@ -26,7 +26,7 @@
         <li><a href="http://learnlayout.com/">http://learnlayout.com/</a></li>
         <li><a href="http://css-tricks.com/box-sizing/">http://css-tricks.com/box-sizing/</a></li>
         <li><a href="http://css-tricks.com/absolute-relative-fixed-positioining-how-do-they-differ/">http://css-tricks.com/absolute-relative-fixed-positioining-how-do-they-differ/</a></li>
-        <li><a href="http://caniuse.com/](http://caniuse.com/">http://caniuse.com/](http://caniuse.com/</a></li>
+        <li><a href="http://caniuse.com/">http://caniuse.com/</a></li>
         <li><a href="http://css3generator.com/">http://css3generator.com/</a></li>
         <li><a href="http://ilovecss.me/">http://ilovecss.me/</a></li>
     </ul>
