--- a/templates/codinggrace_django/resources/source_control.html
+++ b/templates/codinggrace_django/resources/source_control.html
@@ -34,7 +34,18 @@ that you can revert changes, it's quite a life-saver.
 <div>
     Other references:
     <ul>
-        <li><a href="http://mercurial.selenic.com/wiki/Tutorial">Mercurial's own tutorial</a></li>
-        <li><a href="http://mercurial.selenic.com/wiki/QuickReferenceCardsAndCheatSheets">Mercurial's own cheatsheets</a></li>
+        <li><a href="https://www.mercurial-scm.org/wiki/Tutorial">Mercurial's own tutorial</a></li>
+        <li><a href="https://www.mercurial-scm.org/wiki/QuickReferenceCardsAndCheatSheets">Mercurial's own cheatsheets</a></li>
     </ul>
 </div>
+
+<h2>Version Control System Hosts</h2>
+<div>
+    Sign ups are free.
+    <ul>
+        <li><a href="https://bitbucket.org">Bitbucket</a> - host your git and/or mercurial projects</li>
+        <li><a href="https://github.com/">Github</a> - host your git projects</li>
+        <li><a href="https://gitlab.com">Gitlab</a> - offers free unlimited (private) repositories and unlimited collaborators.</li>
+    </ul>
+</div>
+
